--- a/index.css
+++ b/index.css
@@ -1,18 +1,24 @@
+body{
+    background-color: rgb(252, 246, 238);
+}
 div#contenedor-principal{
     width: 80%;
-    border: solid 0.5px;
-    background-color:rgb(247, 182, 158);
     margin-left: 10%;
+    margin-top: 3%;
     padding: 2%;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
 }
 .productos{
     background-color: bisque;
-    border: solid 1px;
     border-radius: 14px;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
+    margin-top: 2%;
+}
+.productos:hover{
+    background-color: rgb(245, 203, 149);
 }
 .imagenes-sec-1{
-    padding-top: 5%;
-    box-sizing: border-box;
+    padding-top: 6%;
 }
 ul#lista-nav{
     display: inline-block;
@@ -25,10 +31,10 @@ ul#lista-nav{
 }
 .texto-info{
     display: flex;
-    text-align: center;
+    /*text-align: center;*/
 }
 .article-texto-info{
-    border: solid 0.5px;
+
     margin-top: 5%;
     margin-bottom: 5%;
     padding: 0.5%;
